--- a/.github/workflows/lambda-release.yaml
+++ b/.github/workflows/lambda-release.yaml
@@ -29,7 +29,7 @@ jobs:
       # Create a zip file of the `src` directory
       - name: Package the source code
         run: |
-          zip -r lambda_asnake.zip src/*
+          (cd src && zip -r ../lambda_asnake.zip .)
 
       # Upload the zip file as a GitHub release asset
       - name: Create GitHub release
